--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -7,7 +7,7 @@ output:
     theme: flatly
 ---
 
-> **DISCLAIMER: I am not an epidemiologist, so the information below should not be used for policy. Neither has this document gone through peer-review, so please do not cite it.**
+> **DISCLAIMER: I am not an epidemiologist, so the information below should not be used for policy. Neither has this document gone through peer review, so please do not cite it.**
 
 ---
 
@@ -25,6 +25,7 @@ library(data.table)
 library(gridExtra)
 library(ggrepel)
 library(ggwordcloud)
+library(leaflet)
 source('main.r')
 source('util.r')
 
@@ -200,7 +201,7 @@ grid.arrange(grobs=gs, layout_matrix=layout)
 
 #### Clusters and unlinked cases through time
 
-Across time, there were more clusters forming, as well as unlinked cases.
+From 7 Apr onwards, there was a greater number of unlinked cases.
 
 ```{r}
 
@@ -296,9 +297,11 @@ hospital = hospital[order(-cases)]
 hospital$proportion = paste0(round(hospital$cases / sum(hospital$cases)*100), "%")
 names(hospital) = unlist(lapply(names(hospital), function(word) camelcase_labeller("", word)))
 knitr::kable(hospital, "markdown")
+
+no_hospital_data = dim(df[tolower(hospital) %in% c("unknown", "not admitted")])[1]
 ```
 
-Note: cases whose hospitals were pending at time of press release and thos who are not admitted are omitted from table above.
+Note: cases whose hospitals were pending at time of press release and those who are not admitted are omitted from table above. There were `r no_hospital_data` (of `r dim(df)[1]`) such cases.
 
 
 ### Recovery
@@ -409,7 +412,7 @@ cluster_cases$cluster = strsplit(cluster_cases$cluster, "; ")
 cluster_cases = data.table(unnest(cluster_cases, cols="cluster"))
 clusters = cluster_cases[, list(cases=.N,
                                 min.date=min(confirmed.at.date),
-                                max.date=max(confirmed.at.date)), by=cluster][order(-cases)][1:10]
+                                max.date=max(confirmed.at.date)), by=cluster][order(-cases)]
 clusters$duration = as.numeric(clusters$max.date - clusters$min.date + 1)
 clusters$proportion = paste0(round(clusters$cases / dim(df)[1]*100), "%")
 clusters$no = 1:dim(clusters)[1]
@@ -428,7 +431,7 @@ clusters = merge(clusters, lp_clust, by.x="cluster", by.y="cluster", all.x=T, al
 ```{r fig.width=10, fig.height=3}
 cluster_cases = merge(cluster_cases, clusters[, c("cluster", "no", "cluster.short.no")], 
                       by.x="cluster", by.y="cluster", all.x=T, all.y=F)
-ggplot(cluster_cases[cluster %in% clusters$cluster], aes(x=reorder(cluster.short.no, -no))) +
+ggplot(cluster_cases[no %in% 1:10], aes(x=reorder(cluster.short.no, -no))) +
   geom_dotplot(method="histodot", binwidth=.1, stackratio=.7, 
                binpositions="all", fill=cbp1[3], stroke=NA) + theme +
   scale_y_continuous(limits=c(0, 3000), breaks=NULL, name=NULL) +
@@ -438,7 +441,7 @@ ggplot(cluster_cases[cluster %in% clusters$cluster], aes(x=reorder(cluster.short
 
 ```{r}
 show_clusters = clusters[, c("no", "cluster", "type", "cases", "proportion", 
-                             "min.date", "max.date", "duration")][order(no)]
+                             "min.date", "max.date", "duration")][order(no)][1:10]
 show_clusters$min.date = format(show_clusters$min.date, "%d.%m.%y")
 show_clusters$max.date = format(show_clusters$max.date, "%d.%m.%y")
 names(show_clusters) = unlist(lapply(gsub("\\.", " ", names(show_clusters)), 
@@ -449,19 +452,22 @@ knitr::kable(show_clusters, "markdown")
 ```{r}
 cluster_cases$no.bract = factor(paste0("[", cluster_cases$no, "]"), 
                                 levels=paste0("[", sort(as.integer(unique(cluster_cases$no))), "]"))
-ggplot(cluster_cases[cluster %in% clusters$cluster], aes(x=age)) +
+ggplot(cluster_cases[no %in% 1:10], aes(x=age)) +
   geom_histogram(binwidth=10) + theme +
   facet_wrap(~no.bract, ncol=3, scales="free_y") + 
   scale_y_continuous(breaks=breaks_f) +
   scale_x_continuous(breaks=breaks_f) +
   theme(strip.background = element_rect(fill=cbp1[3])) +
-  ylab("Number of people\n") + xlab("\nAge") + ggtitle("Age profile of different clusters")
-# interesting: https://stackoverflow.com/questions/19440069/
+  ylab("Number of people\n") + xlab("\nAge") + ggtitle("Age profile of top 10 largest clusters")
+# TODO if time: https://stackoverflow.com/questions/19440069/ [different colours for type]
 ```
 
 ```{r}
-# TODO: type of venue of cluster/ map of cluster (ggmap)
+leaflet(clusters[!(is.na(x) | is.na(y))]) %>% addProviderTiles(providers$Stamen.Toner) %>%
+ addCircleMarkers(lat=~y, lng=~x, radius=~5+(cases/10), stroke=FALSE, fillOpacity=0.5,
+                  label=~paste0(cluster, " - cases: ", cases), color="red")
 ```
+Note: some clusters had more than one locality on the map but were only assigned to one point on the map.
 
 
 ## Methods
@@ -504,7 +510,6 @@ The specific steps taken to get the data:
 5. `links.to` are linked cases which are not family; `links.to.family` are linked cases which are family.
 6. No detailed annexes from 5-6 Apr 2020, only cluster links and release dates updated.
 7. The `confirmed.at.date` is press release date, not the `confirmed at date` provided by MOH Annex for dataset collected from 2 Apr 2020, whereas it was otherwise so prior to 2 Apr 2020.
-
 
 ---
 This document was created by Eunice J.Y. Soh ([eunices.github.io](https://eunices.github.io)).
