--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -185,7 +185,7 @@ gs = list(ggplot(data_1st_wave, aes(x=reorder(camelcase_labeller("", country.of.
     theme(axis.text.y=element_text(size=rel(1))) +
     guides(fill=F) +
     geom_text(aes(fill=country.of.origin, y=N+5), colour = "black", 
-              fontface = "bold", size=3, show.legend = FALSE),
+              fontface = "bold", size=3, show.legend = FALSE, hjust = 0),
 
   ggplot(data_2nd_wave, aes(label = country.of.origin, size = N, angle=90)) +
     geom_text_wordcloud_area(eccentricity=.35,
@@ -457,7 +457,7 @@ ggplot(cluster_cases[no %in% 1:10], aes(x=age)) +
   scale_y_continuous(breaks=breaks_f) +
   scale_x_continuous(breaks=breaks_f) +
   theme(strip.background = element_rect(fill=cbp1[3]), 
-        axis.text.x=element_text(size=rel(.8)),
+        axis.text.x=element_text(size=rel(.5)),
         axis.text.y=element_text(size=rel(.8)))+
   ylab("Number of people\n") + xlab("\nAge") + ggtitle("Age profile of top 10 largest clusters")
 # TODO if time: https://stackoverflow.com/questions/19440069/ [different colours for type]
