--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -333,9 +333,9 @@ hist_max = max(table(cut(as.numeric(df$days.to.recover.resources),
 
 ggplot(df, aes(x=days.to.recover.resources)) + 
   geom_histogram(binwidth=binwidth, na.rm=T, color=cbp1[3], fill=cbp1[6], pad=T) + 
-  xlab("\nDays to recover") + ylab("Number of people\n") +
+  xlab("\nDays to recover") + ylab("Number of cases\n") +
   geom_vline(xintercept=mean_recovery_time, size=1, col=cbp1[2], linetype="dotted") +
-  scale_y_continuous(breaks=seq(0, hist_max, ifelse(hist_max<30, 1, 5))) +
+  scale_y_continuous(breaks=seq(0, hist_max, ifelse(hist_max<30, 1, 20))) +
   scale_x_continuous(breaks=seq(0, max, ifelse(max<30, 1, 5))) + 
   theme
 ```
