--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -174,7 +174,8 @@ gs = list(ggplot(data_1st_wave, aes(x=reorder(camelcase_labeller("", country.of.
     xlab("") + ylab("\nNumber of imported cases detected") + ggtitle("Second wave") +
     theme(axis.text.y=element_text(size=rel(1))) +
     guides(fill=F) +
-    geom_text(aes(fill=country.of.origin, y=N+5), colour = "black", 
+    scale_y_continuous(breaks=c(0, max(data_2nd_wave$N, 20)) +
+    geom_text(aes(fill=country.of.origin, y=N+3), colour = "black", 
               fontface = "bold", size=3, show.legend = FALSE, hjust = 0),
 
   ggplot(data_2nd_wave, aes(label = country.of.origin, size = N, angle=90)) +
