--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -1,6 +1,6 @@
 ---
 runtime: shiny
-title: "COVID-19 in Singapore"
+title: "Covid-19 in Singapore"
 output: 
   html_document:
     toc: true
@@ -68,7 +68,7 @@ max_date = max(df$confirmed.at.date, na.rm=T)
 date_second_wave = as.Date("2020-02-25")
 ```
 
-The first case of covid-19 was detected in Singapore on `r format(min_date, "%d %B %Y")`. 
+The first case of Covid-19 was detected in Singapore on `r format(min_date, "%d %B %Y")`. 
 
 Key measures and events are marked below. Just at a glance, the border control measures and events (category 4) seem to be effacious as the number of imported cases dropped 31 Mar onwards.
 
@@ -265,7 +265,7 @@ renderPlot({
 
 #### Back-of-the-envelope hospital load
 
-Measuring hospital load is key to ensure that hospitals are not overloaded.  We assume that the number of those who require hospitalisation is 20% of the case load, since it is a conservative estimate that 20% of the detected cases require hospitalisation and/or ICU care.
+Measuring hospital load is key to ensure that hospitals are not overloaded. We assume that the number of those who require hospitalisation is 20% of the case load, since it is a conservative estimate that 20% of the detected cases require hospitalisation and/or ICU care.
 
 From [24 Mar 2020](https://go.gov.sg/measures24mar), those who still test positive but display no symptoms will no longer be hospitalised but moved to isolation facilities.
 
@@ -284,7 +284,7 @@ renderPlot({
 })
 ```
 
-There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). There is also the NCID has approximately 300 beds. If it is assumed that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required), then there would be `r max_load` beds available. 
+There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. Prior to covid-19, they were operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). There is also the NCID has approximately 300 beds. If it is assumed that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between Covid-19 patients (more than usual required), then there would be `r max_load` beds available. 
 
 #### Hospital/isolation facilities
 
@@ -341,7 +341,7 @@ ggplot(df, aes(x=days.to.recover.resources)) +
 
 #### Risk factors
 
-Is there an association between the risk factors and number of days for recovery?
+Is there an association between the risk factors and number of days for recovery? Recovery in this case does not refer to clinical symptoms but the detection of viral nucleic acid from [nasal swabs](https://mothership.sg/2020/04/singapore-covid-19-nose-swab/), which may be dead or alive.
 
 ```{r}
 selectInput("age_width", label="Age bin width", choices=c(5, 10, 20), selected=20)
